Added new customer and movies functionalitys

--- a/Vidly001/Views/Movie/Details.cshtml
+++ b/Vidly001/Views/Movie/Details.cshtml
@@ -7,3 +7,10 @@
 <h2>Details</h2>
 
 <h3>@Model.Name</h3>
+
+<ul>
+    <li>Genre: @Model.Genre.Name</li>
+    <li>Genre: @Model.ReleaseDate</li>
+    <li>Genre: @Model.Uploaded</li>
+    <li>Genre: @Model.Count</li>
+</ul>
