Section 4 - Create Edit/Save Movies

--- a/Vidly001/Views/Customer/Details.cshtml
+++ b/Vidly001/Views/Customer/Details.cshtml
@@ -12,9 +12,9 @@
 
 <ul>
     <li>Membership Type : @Model.MembershipType.SubscriptionTypeName</li>
-    @if (Model.BirthDate != null)
+    @if (Model.BirthDate.HasValue)
     {
-        <li>Membership Type : @Model.BirthDate</li>
+        <li>Membership Type : @Model.BirthDate.Value.ToShortDateString()</li>
     }
 </ul>
 
