--- a/Vidly001/Views/Customer/Index.cshtml
+++ b/Vidly001/Views/Customer/Index.cshtml
@@ -12,14 +12,12 @@
         <table class="table table-bordered">
             <tr>
                 <th>Customer Name</th>
-                @*<th>Discount Rate</th>*@
                 <th>Membership Type</th>
             </tr>
             @foreach (var customer in Model)
             {
             <tr>
-                <td>@Html.ActionLink(customer.Name, "Details", "Customer", new { id = customer.Id }, null)</td>
-                @*<td>@customer.MembershipType.DiscountRate%</td>*@
+                <td>@Html.ActionLink(customer.Name, "Edit", "Customer", new { id = customer.Id }, null)</td>
                 <td>@customer.MembershipType.SubscriptionTypeName</td>
             </tr>
             }
