--- a/Vidly001/Views/Movie/Index.cshtml
+++ b/Vidly001/Views/Movie/Index.cshtml
@@ -9,17 +9,21 @@
 
 <div class="container">
     <div class="form-group row">
+        <a href="Movie/Create" class="btn btn-primary" type="submit">NEW MOVIE</a> 
+        <hr />
         <table class="table table-bordered table-hover">
             <thead>
                 <tr>
                     <th>Movie Name</th>
+                    <th>Movie Genre</th>
                 </tr>
             </thead>
             <tbody>
                 @foreach (var movie in Model)
                 {
                     <tr>
-                        <td>@Html.ActionLink(movie.Name, "Details", "Movie", new { id = movie.Id }, null)</td>
+                        <td>@Html.ActionLink(movie.Name, "Edit", "Movie", new { id = movie.Id }, null)</td>
+                        <td>@movie.Genre.Name</td>
                     </tr>
                 }
             </tbody>
