--- a/Vidly001/Content/Site.css
+++ b/Vidly001/Content/Site.css
@@ -28,3 +28,11 @@ textarea {
     border-radius: 5px;
     padding: 30px 10px 10px 10px;
 }
+
+.field-validation-error {
+    color: red;
+}
+
+.input-validation-error {
+    border: 2px solid red;
+}
