--- a/Vidly001/Views/Customer/CustomerForm.cshtml
+++ b/Vidly001/Views/Customer/CustomerForm.cshtml
@@ -9,29 +9,36 @@
 
 @using (Html.BeginForm("Save", "Customer"))
 {
+    @Html.ValidationSummary(true, "Please Fix The errors bellow")
     <div class="form-group">
         @Html.LabelFor(w => w.Customer.Name)
         @Html.TextBoxFor(w => w.Customer.Name, new { @class = "form-control" })
+        @Html.ValidationMessageFor(w => w.Customer.Name)
+    </div>
+
+    <div class="form-group">
+        @Html.LabelFor(w => w.Customer.MembershipTypeId)
+        @Html.DropDownListFor(w => w.Customer.MembershipTypeId, new SelectList(Model.MembershipTypes, "Id", "SubscriptionTypeName"), "Select Membership Type", new { @class = "form-control" })
+        @Html.ValidationMessageFor(w => w.Customer.MembershipTypeId)
     </div>
 
     <div class="form-group">
         @Html.LabelFor(w => w.Customer.BirthDate)
         @Html.TextBoxFor(w => w.Customer.BirthDate, "{0:d MMM yyyy}", new { @class = "form-control" })
+        @Html.ValidationMessageFor(w => w.Customer.BirthDate)
     </div>
 
-
-    <div class="form-group">
-        @Html.LabelFor(w => w.Customer.MembershipTypeId)
-        @Html.DropDownListFor(w => w.Customer.MembershipTypeId, new SelectList(Model.MembershipTypes, "Id", "SubscriptionTypeName"), "Select Membership Type", new { @class = "form-control" })
-    </div>
-    
     <div class="checkbox">
         <label>
             @Html.CheckBoxFor(w => w.Customer.IsSubscribedToNewsLetter) Subscride to Newsletter?
         </label>
     </div>
 
+    @Html.AntiForgeryToken()
     @Html.HiddenFor(w => w.Customer.Id)
     <button type="submit" class="btn btn-primary">Save</button>
 }
 
+@section scripts{
+    @Scripts.Render("~/bundles/modernizr")
+    }
