--- a/Vidly001/Views/Movie/Index.cshtml
+++ b/Vidly001/Views/Movie/Index.cshtml
@@ -9,24 +9,72 @@
 
 <div class="container">
     <div class="form-group row">
-        <a href="Movie/Create" class="btn btn-primary" type="submit">NEW MOVIE</a> 
+        <a href="Movie/Create" class="btn btn-primary" type="submit">NEW MOVIE</a>
         <hr />
-        <table class="table table-bordered table-hover">
+        <table id="movies" class="table table-bordered">
             <thead>
                 <tr>
                     <th>Movie Name</th>
                     <th>Movie Genre</th>
+                    <th>Delete</th>
                 </tr>
             </thead>
             <tbody>
-                @foreach (var movie in Model)
-                {
-                    <tr>
-                        <td>@Html.ActionLink(movie.Name, "Edit", "Movie", new { id = movie.Id }, null)</td>
-                        <td>@movie.Genre.Name</td>
-                    </tr>
-                }
+                @*@foreach (var movie in Model)
+                    {
+                        <tr>
+                            <td>@Html.ActionLink(movie.Name, "Edit", "Movie", new { id = movie.Id }, null)</td>
+                            <td>@movie.Genre.Name</td>
+                        </tr>
+                    }*@
             </tbody>
         </table>
     </div>
 </div>
+
+@section scripts{
+    <script>
+        $(document).ready(function () {
+
+            var table = $("#movies").DataTable({
+                ajax: {
+                    url: "/api/movies",
+                    dataSrc: ""
+                },
+                columns: [
+                    {
+                        data: "name",
+                        render: function (data, type, movie) {
+                            return "<a href='/movie/edit/" + movie.id + "'>" + movie.name + "</a>";
+                        }
+                    },
+                    {
+                        data: "genre.name"
+                    },
+                    {
+                        data: "id",
+                        render: function (data) {
+                            return "<button class='btn-link js-delete' data-movie-id=" + data + ">Delete</button>"
+                        }
+                    }
+                ]
+            });
+
+            $("#movies").on("click", ".js-delete", function () {
+                var button = $(this);
+
+                bootbox.confirm("You sure?..", function (result) {
+                    if (result) {
+                        $.ajax({
+                            url: "/api/movies/" + button.attr("data-movie-id"),
+                            method: "DELETE",
+                            success: function () {
+                                table.row(button.parents("tr")).remove().draw();
+                            }
+                        });
+                    }
+                });
+            });
+        });
+    </script>
+}
