Sepereted Code in files added Identity validations for users

--- a/Vidly001/Views/Account/ResetPassword.cshtml
+++ b/Vidly001/Views/Account/ResetPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model Vidly001.Models.ResetPasswordViewModel
+﻿@model Vidly001.Models.AccountManagment.ResetPasswordViewModel
 @{
     ViewBag.Title = "Reset password";
 }
