--- a/Vidly001/Views/Account/SendCode.cshtml
+++ b/Vidly001/Views/Account/SendCode.cshtml
@@ -1,4 +1,4 @@
-﻿@model Vidly001.Models.SendCodeViewModel
+﻿@model Vidly001.Models.AccountManagment.SendCodeViewModel
 @{
     ViewBag.Title = "Send";
 }
