--- a/Vidly001/Views/Account/VerifyCode.cshtml
+++ b/Vidly001/Views/Account/VerifyCode.cshtml
@@ -1,4 +1,4 @@
-﻿@model Vidly001.Models.VerifyCodeViewModel
+﻿@model Vidly001.Models.AccountManagment.VerifyCodeViewModel
 @{
     ViewBag.Title = "Verify";
 }
