--- a/Vidly001/Views/Account/ForgotPassword.cshtml
+++ b/Vidly001/Views/Account/ForgotPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model Vidly001.Models.ForgotPasswordViewModel
+﻿@model Vidly001.Models.AccountManagment.ForgotPasswordViewModel
 @{
     ViewBag.Title = "Forgot your password?";
 }
