--- a/Vidly001/Views/Account/_ExternalLoginsListPartial.cshtml
+++ b/Vidly001/Views/Account/_ExternalLoginsListPartial.cshtml
@@ -1,4 +1,4 @@
-﻿@model Vidly001.Models.ExternalLoginListViewModel
+﻿@model Vidly001.Models.AccountManagment.ExternalLoginListViewModel
 @using Microsoft.Owin.Security
 
 <h4>Use another service to log in.</h4>
