Added Toastr.css/js Validations for rendering a movie and for customer

--- a/Vidly001/Content/Site.css
+++ b/Vidly001/Content/Site.css
@@ -29,10 +29,11 @@ textarea {
     padding: 30px 10px 10px 10px;
 }
 
-.field-validation-error {
+.field-validation-error,
+label.error {
     color: red;
 }
 
-.input-validation-error {
+.input-validation-error, input.error {
     border: 2px solid red;
 }
