--- a/Vidly001/Views/Rental/New.cshtml
+++ b/Vidly001/Views/Rental/New.cshtml
@@ -4,14 +4,14 @@
     <div class="form-group">
         <label>Customer</label>
         <div class="tt-container">
-            <input id="customer" type="text" value="" class="form-control" />
+            <input id="customer" name="customer" required data-rule-validCustomer="true" type="text" value="" class="form-control" />
         </div>
     </div>
 
     <div class="form-group">
         <label>Movie</label>
         <div class="tt-container">
-            <input id="movie" type="text" value="" class="form-control" />
+            <input id="movie" name="movie" required data-rule-validMovie="true" type="text" value="" class="form-control" />
         </div>
     </div>
 
@@ -25,6 +25,7 @@
 </form>
 @section scripts
 {
+    @Scripts.Render("~/bundles/jqueryval")
     <script>
         $(document).ready(function () {
 
@@ -76,20 +77,42 @@
                     vm.movieIds.push(movie.id);
                 });
 
-            $("#newRental").submit(function (e) {
-                e.preventDefault();
+            $.validator.addMethod("validMovie", function () {
+                return vm.movieIds.length > 0;
+            },
+                "Please select at least one movie"
+            );
 
-                $.ajax({
-                    url: "/api/Rentals",
-                    method: "post",
-                    data: vm
-                })
-                    .done(function () {
-                        console.log("done");
+
+            $.validator.addMethod("validCustomer", function () {
+                return vm.customerId && vm.customerId !== 0;
+            },
+                "Please select a valid customer"
+            );
+
+            var validator = $("#newRental").validate({
+                submitHandler: function () {
+                    $.ajax({
+                        url: "/api/Rentals",
+                        method: "post",
+                        data: vm
                     })
-                    .fail(function () {
+                        .done(function () {
+                            toastr.success("Rentals successfully recorded.");
 
-                    });
+                            $("#customer").typeahead("val", "");
+                            $("#movie").typeahead("val", "");
+                            $("#movies").empty();
+
+                            vm = { movieIds: [] };
+
+                            validator.resetForm();
+                        })
+                        .fail(function () {
+                            toastr.error("Unexpected Error..");
+                        });
+                    return false;
+                }
             });
         });
     </script>
