--- a/Vidly001/Views/Movie/ReadOnlyList.cshtml
+++ b/Vidly001/Views/Movie/ReadOnlyList.cshtml
@@ -9,16 +9,17 @@
 
 <div class="container">
     <div class="form-group row">
+        <a href="Movie/Create" class="btn btn-primary" type="submit">NEW MOVIE</a>
+        <hr />
         <table id="movies" class="table table-bordered">
             <thead>
                 <tr>
                     <th>Movie Name</th>
                     <th>Movie Genre</th>
+                    <th>Created By</th>
                 </tr>
             </thead>
-            <tbody>
-
-            </tbody>
+            <tbody></tbody>
         </table>
     </div>
 </div>
@@ -39,6 +40,10 @@
                     {
                         data: "genre.name"
                     }
+                    //,
+                    //{
+                    //    data: "customer.name"
+                    //}
                 ]
             });
         });
